--- a/lotr-app/src/app/main/components/header/header.component.html
+++ b/lotr-app/src/app/main/components/header/header.component.html
@@ -1,3 +1,3 @@
-<header>
-    <h3><span routerLink="/start"  >The Lord Of The Rings</span></h3>
-</header>
+<mat-toolbar>
+    <span routerLink="">The Lord Of The Rings</span>
+</mat-toolbar>
