--- a/lotr-app/src/app/main/components/header/header.component.scss
+++ b/lotr-app/src/app/main/components/header/header.component.scss
@@ -1,22 +1,13 @@
-@import '../../module-styling.-variables/variables.scss';
+@import '../../module-styling-variables/variables.scss';
 
-header {
+mat-toolbar {
   background-color: black;
   color: white;
-  font-weight: bold;
   padding-left: 5px;
-  height: $header-height;
 
   -webkit-box-shadow: 0px 1px 5px 0px rgba(22, 36, 196, 1);
   -moz-box-shadow: 0px 1px 5px 0px rgba(22, 36, 196, 1);
   box-shadow: 0px 2px 1px 0px rgba(22, 36, 196, 1);
-}
-
-h3 {
-  display: flex;
-  align-items: center;
-  height: 100%;
-  margin: 0;
 }
 
 span {
