--- a/lotr-app/src/app/main/components/home/home.component.html
+++ b/lotr-app/src/app/main/components/home/home.component.html
@@ -1,13 +1,13 @@
 <div class="container">
   <section>
       <div class="flex-wrapper">
-        <div class="">
+        <div>
           <button mat-fab color="primary" routerLink="books" routerLinkActive="router-link-active"  matTooltip="Książki o władcy pierścia" aria-label="Książki o władcy pierścia">
             <mat-icon>bookmark</mat-icon>
           </button>
         </div>
-        <div class="">
-          <button mat-fab color="accent" matTooltip="Filmy o władcy pierścia" aria-label="Filmy o władcy pierścia">
+        <div>
+          <button mat-fab color="accent" routerLink="movies" matTooltip="Filmy o władcy pierścia" aria-label="Filmy o władcy pierścia">
             <mat-icon>movie</mat-icon>
           </button>
         </div>
